protox/src/parse/snapshots/protox__parse__tests__parse_import-13.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Import {
        kind: None,
        value: "foobar",
        value_span: 7..18,
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..19,
    },
)
