protox/src/parse/snapshots/protox__parse__tests__parse_message-12.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Message {
        name: Ident {
            value: "Foo",
            span: 8..11,
        },
        body: MessageBody {
            items: [
                Message(
                    Message {
                        name: Ident {
                            value: "Foo",
                            span: 30..33,
                        },
                        body: MessageBody {
                            items: [
                                Field(
                                    Field {
                                        label: Some(
                                            (
                                                Optional,
                                                48..56,
                                            ),
                                        ),
                                        name: Ident {
                                            value: "start",
                                            span: 63..68,
                                        },
                                        kind: Normal {
                                            ty: Int32,
                                            ty_span: 57..62,
                                        },
                                        number: Int {
                                            negative: false,
                                            value: 1,
                                            span: 71..72,
                                        },
                                        options: None,
                                        comments: Comments {
                                            leading_detached_comments: [],
                                            leading_comment: None,
                                            trailing_comment: Some(
                                                " trail1\n",
                                            ),
                                        },
                                        span: 48..73,
                                    },
                                ),
                                Field(
                                    Field {
                                        label: Some(
                                            (
                                                Optional,
                                                97..105,
                                            ),
                                        ),
                                        name: Ident {
                                            value: "end",
                                            span: 112..115,
                                        },
                                        kind: Normal {
                                            ty: Int32,
                                            ty_span: 106..111,
                                        },
                                        number: Int {
                                            negative: false,
                                            value: 2,
                                            span: 118..119,
                                        },
                                        options: None,
                                        comments: Comments {
                                            leading_detached_comments: [],
                                            leading_comment: None,
                                            trailing_comment: Some(
                                                " trail2\n",
                                            ),
                                        },
                                        span: 97..120,
                                    },
                                ),
                            ],
                            extensions: [],
                            options: [],
                            reserved: [],
                        },
                        comments: Comments {
                            leading_detached_comments: [],
                            leading_comment: None,
                            trailing_comment: None,
                        },
                        span: 22..143,
                    },
                ),
            ],
            extensions: [],
            options: [],
            reserved: [],
        },
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..149,
    },
)
