protox/src/parse/snapshots/protox__parse__tests__parse_message-13.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Message {
        name: Ident {
            value: "Foo",
            span: 8..11,
        },
        body: MessageBody {
            items: [
                Field(
                    Field {
                        label: None,
                        name: Ident {
                            value: "foo",
                            span: 22..25,
                        },
                        kind: Normal {
                            ty: Named(
                                TypeName {
                                    leading_dot: None,
                                    name: FullIdent {
                                        parts: [
                                            Ident {
                                                value: "service",
                                                span: 14..21,
                                            },
                                        ],
                                    },
                                },
                            ),
                            ty_span: 14..21,
                        },
                        number: Int {
                            negative: false,
                            value: 1,
                            span: 28..29,
                        },
                        options: None,
                        comments: Comments {
                            leading_detached_comments: [],
                            leading_comment: None,
                            trailing_comment: None,
                        },
                        span: 14..30,
                    },
                ),
            ],
            extensions: [],
            options: [],
            reserved: [],
        },
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..32,
    },
)
