protox/src/parse/snapshots/protox__parse__tests__parse_oneof-5.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_oneof() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    Oneof {
        name: Ident {
            value: "Foo",
            span: 6..9,
        },
        options: [],
        fields: [
            Field {
                label: Some(
                    (
                        Optional,
                        12..20,
                    ),
                ),
                name: Ident {
                    value: "Bar",
                    span: 27..30,
                },
                kind: Group {
                    ty_span: 21..26,
                    body: MessageBody {
                        items: [],
                        extensions: [],
                        options: [],
                        reserved: [],
                    },
                },
                number: Int {
                    negative: false,
                    value: 1,
                    span: 33..34,
                },
                options: None,
                comments: Comments {
                    leading_detached_comments: [],
                    leading_comment: None,
                    trailing_comment: None,
                },
                span: 12..37,
            },
        ],
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..39,
    },
)
