protox/src/parse/snapshots/protox__parse__tests__parse_option-4.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Option {
        body: OptionBody {
            name: [
                Extension(
                    TypeName {
                        leading_dot: None,
                        name: FullIdent {
                            parts: [
                                Ident {
                                    value: "foo",
                                    span: 8..11,
                                },
                            ],
                        },
                    },
                    7..12,
                ),
                Ident(
                    Ident {
                        value: "bar",
                        span: 13..16,
                    },
                ),
            ],
            value: Ident {
                negative: false,
                ident: Ident {
                    value: "true",
                    span: 19..23,
                },
                span: 19..23,
            },
        },
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..24,
    },
)
