protox/src/parse/snapshots/protox__parse__tests__parse_service-12.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Err(
    [
        UnexpectedToken {
            expected: "'rpc', '}', 'option' or ';'",
            found: "bar",
            span: 14..17,
        },
    ],
)
